Added base functionality
Signed-off-by: Arnau Mora <arnyminerz@proton.me>

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,19 @@
 kotlin.code.style=official
+kotlin.version=1.8.20
+org.gradle.jvmargs=-Xmx4096m
+
+# Android Configuration
+kotlin.mpp.androidSourceSetLayoutVersion=2
+android.useAndroidX=true
+android.compileSdk=34
+android.minSdk=26
+
+# Desktop Configuration
+exposed.version=0.40.1
+
+# Dependencies versions
+agp.version=8.0.0
+compose.version=1.4.0
+detekt.version=1.23.0
+moko-resources.version=0.23.0
+buildkonfig.version=0.13.3
